Patch#1647439 Resolving symlinks before importing and fixes for Req#1709390 zophImport defaults from .zophrc

--- a/bin/zophrc.sample
+++ b/bin/zophrc.sample
@@ -22,6 +22,8 @@ $image_dir = '/data/images/';
 # Change these to override default settings
 # (these settings do not have a matching setting in config.inc.php)
 #
-$datedDirs = 0
-$copy = 0
-$hierarchical = 0
+$datedDirs = 0;
+$copy = 0;
+$hierarchical = 0;
+$verbose = 0;
+$resolveSymlinks = 0;
