Perl chokes when the .zophrc file ends with a negative assignment (" = 0"), adding "1;" to make sure it always ends "positively".

--- a/bin/zophrc.sample
+++ b/bin/zophrc.sample
@@ -27,3 +27,6 @@ $copy = 0;
 $hierarchical = 0;
 $verbose = 0;
 $resolveSymlinks = 0;
+
+# Perl does not like it when this file ends with a "= 0"
+1;
