--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -4,8 +4,10 @@ sonar.projectVersion=0.9.1
 
 sonar.projectDescription=Zoph Organizes Photos
 
-sonar.tests=php/UnitTests
+sonar.tests=UnitTests
 sonar.sources=php,cli
 sonar.language=php
 
-sonar.phpUnit.configuration=php/UnitTests/phpunit.xml
+sonar.phpUnit.configuration=UnitTests/phpunit.xml
+sonar.php.coverage.reportPath=UnitTests/output/coverage.xml
+sonar.php.tests.reportPath=UnitTests/output/junit.xml
