--- a/.gitattributes
+++ b/.gitattributes
@@ -4,5 +4,5 @@
 .gitattributes 	export-ignore
 .gitignore 	export-ignore
 # Unittests
-UnitTests/*	export-ignore
+UnitTests	export-ignore
 sonar-project.properties	export-ignore
