Changed logon screen
- Moved logon HTML to a template
- Created a separate CSS file for logon
- Added two default background images
- Made first scaffolding to display the background images

Issue #72

--- a/.gitattributes
+++ b/.gitattributes
@@ -6,3 +6,7 @@
 # Unittests
 UnitTests	export-ignore
 sonar-project.properties	export-ignore
+# binary files
+*.jpg	binary	diff=exif
+*.gif	binary	diff=exif
+*.png	binary	diff=exif
